<resources>
    <string name="app_name">Mejora</string>
    <string name="bienvenido">Bienvenido</string>
    <string name="login">Login</string>
    <string name="correo">Correo</string>
    <string name="password">Password</string>
    <string name="registrarse">Registrarse</string>
    <string name="tres">Tienes que tener cuenta de que cada usuario \n solo puede tener 3 personajes</string>
    <string name="selecciona_un_personaje">Selecciona un personaje</string>
    <string name="nombre">Nombre</string>
    <string name="clase">Clase</string>
    <string name="raza">Raza</string>
    <string name="borrar">Borrar</string>
    <string name="cargar">Cargar</string>
    <string name="Aceptar">Aceptar</string>
    <string name="Mago">Mago</string>
    <string name="Arquero">Arquero</string>
    <string name="Guerrero">Guerrero</string>
    <string name="Ladron">Ladron</string>
    <string name="Orco">Orco</string>
    <string name="Elfo">Elfo</string>
    <string name="Humano">Humano</string>
    <string name="Enano">Enano</string>
    <string name="Nombre">Nombre</string>
    <string name="Todo">Todo</string>
    <string name="Seguir">Seguir</string>
    <string name="Volver">Volver</string>
    <string name="Dado">Dado</string>
    <string name="todo">todo</string>
    <string name="Expli">
        Comienza la aventura,
        pulsa el DADO para avanzar.
        CUIDADO puedes
        encontrarte enemigos
    </string>
    <string name="comprar">Comprar</string>
    <string name="menos">-</string>
    <string name="mas">+</string>
    <string name="cancelar">Cancelar</string>
    <string name="vender">Vender</string>
    <string name="continuar">Continuar</string>
    <string name="comerciar">Comeciar</string>
    <string name="volver">Volver</string>
    <string name="recoger">Recoger</string>
    <string name="Descripcion">Descripcion</string>
    <string name="_100_100">100/100</string>
    <string name="hp_enemigo">HP Enemigo</string>
    <string name="vida_jugador">100/100</string>
    <string name="atacar">Atacar</string>
    <string name="huir">Huir</string>
    <string name="objetos">Objetos</string>
    <string name="volver_a_empezar">Volve a Empezar</string>
    <string name="entrar_a_n_ciudad">Entrar a ciudad</string>
    <string name="te_queda_derrotar_5_enemigos">Te queda derrotar 5 enemigos</string>
    <string name="guardar">Guardar</string>
    <string-array name="Objetos">
        <item> </item>
        <item>Espada</item>
        <item>Escudo</item>
        <item>Armadura</item>
        <item>Pocion</item>
    </string-array>

</resources>