<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ElegirClase">

    <Button
        android:id="@+id/ladron"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Ladron"
        app:layout_constraintBottom_toTopOf="@+id/Aceptar"
        app:layout_constraintEnd_toStartOf="@+id/Arquero"
        app:layout_constraintHorizontal_bias="0.2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Guerrero"
        app:layout_constraintVertical_bias="0.544" />

    <Button
        android:id="@+id/Arquero"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Arquero"
        app:layout_constraintBottom_toTopOf="@+id/Aceptar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/ladron"
        app:layout_constraintTop_toBottomOf="@+id/Mago"
        app:layout_constraintVertical_bias="0.5" />

    <Button
        android:id="@+id/Guerrero"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Guerrero"
        app:layout_constraintBottom_toTopOf="@+id/ladron"
        app:layout_constraintEnd_toStartOf="@id/Mago"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imagenes"
        app:layout_constraintVertical_bias="0.544" />

    <Button
        android:id="@+id/Mago"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Mago"
        app:layout_constraintBottom_toTopOf="@+id/Arquero"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/Guerrero"
        app:layout_constraintTop_toBottomOf="@+id/imagenes"
        app:layout_constraintVertical_bias="0.5" />

    <Button
        android:id="@+id/Aceptar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Aceptar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imagenes"
        app:layout_constraintVertical_bias="0.65"
        app:layout_constraintHorizontal_bias="0.5"/>

    <ImageView
        android:id="@+id/imagenes"
        android:layout_width="270dp"
        android:layout_height="230dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.161"
        tools:srcCompat="@tools:sample/avatars" />

</androidx.constraintlayout.widget.ConstraintLayout>