<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Dado">
    <ImageView
        android:id="@+id/Valle"
        android:layout_width="416dp"
        android:layout_height="302dp"
        android:contentDescription="@string/todo"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.6"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        tools:ignore="ImageContrastCheck"
        tools:src="@drawable/valle" />


    <ImageButton
        android:id="@+id/Dado"
        android:layout_width="154dp"
        android:layout_height="118dp"
        android:background="@android:color/transparent"
        android:contentDescription="@string/Dado"
        android:scaleType="fitCenter"
        android:src="@drawable/d6_dice"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.175"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Valle"
        app:layout_constraintVertical_bias="0.048"
        tools:ignore="SpeakableTextPresentCheck" />

    <TextView
        android:id="@+id/Explicacion"
        android:layout_width="207dp"
        android:layout_height="108dp"
        android:text="@string/Expli"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Dado"
        app:layout_constraintVertical_bias="0.12" />

    <Button
        android:id="@+id/BotonC"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Explicacion" />

    <TextView
        android:id="@+id/PesoMochila"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/BotonC"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Explicacion" />

    <Button
        android:id="@+id/Guardar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/guardar"
        app:layout_constraintBottom_toTopOf="@+id/Explicacion"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.432"
        app:layout_constraintStart_toEndOf="@+id/Dado"
        app:layout_constraintTop_toBottomOf="@+id/Valle"
        app:layout_constraintVertical_bias="0.462" />
</androidx.constraintlayout.widget.ConstraintLayout>